Refactor Tailwind CSS and update navigation structure
Refactor Tailwind CSS configuration and styles for improved structure and readability. Update navigation and page components to support new blog and resources sections.

--- a/index.html
+++ b/index.html
@@ -13,51 +13,20 @@
       tailwind.config = {
         theme: {
           extend: {
-            colors: {
-              paper: "#fdfdfb",
-              ink: "#1a1a1a",
-              muted: "#717171",
-              accent: "#2c3e50",
-              border: "#e5e5e0",
-            },
-            fontFamily: {
-              sans: ['Inter', 'sans-serif'],
-              serif: ['Noto Serif TC', 'serif'],
-            },
-            animation: { 'fade-in': 'fadeIn 0.8s ease-out' },
-            keyframes: {
-              fadeIn: {
-                '0%': { opacity: '0', transform: 'translateY(15px)' },
-                '100%': { opacity: '1', transform: 'translateY(0)' },
-              }
-            }
+            colors: { paper: "#fdfdfb", ink: "#1a1a1a", muted: "#717171", border: "#e5e5e0" },
+            fontFamily: { sans: ['Inter', 'sans-serif'], serif: ['Noto Serif TC', 'serif'] },
+            animation: { 'fade-in': 'fadeIn 0.6s ease-out' },
+            keyframes: { fadeIn: { '0%': { opacity: '0', transform: 'translateY(10px)' }, '100%': { opacity: '1', transform: 'translateY(0)' } } }
           },
         },
       }
     </script>
     <style>
-      body { 
-        background-color: #fdfdfb; 
-        color: #1a1a1a; 
-        font-family: 'Inter', sans-serif;
-        background-image: radial-gradient(#e5e5e0 0.5px, transparent 0.5px);
-        background-size: 24px 24px;
-      }
-      .minimal-nav { 
-        background: rgba(253, 253, 251, 0.9); 
-        backdrop-filter: blur(8px); 
-        border-bottom: 1px solid #e5e5e0; 
-      }
-      .minimal-card { 
-        background: #ffffff; 
-        border: 1px solid #e5e5e0; 
-        transition: all 0.4s cubic-bezier(0.165, 0.84, 0.44, 1);
-      }
-      .minimal-card:hover {
-        transform: translateY(-4px);
-        border-color: #1a1a1a;
-        box-shadow: 0 10px 30px rgba(0,0,0,0.05);
-      }
+      body { background-color: #fdfdfb; color: #1a1a1a; font-family: 'Inter', sans-serif; background-image: radial-gradient(#e5e5e0 0.5px, transparent 0.5px); background-size: 24px 24px; }
+      .minimal-nav { background: rgba(253, 253, 251, 0.9); backdrop-filter: blur(8px); border-bottom: 1px solid #e5e5e0; }
+      .minimal-card { background: #ffffff; border: 1px solid #e5e5e0; transition: all 0.4s ease; }
+      .minimal-card:hover { transform: translateY(-4px); border-color: #1a1a1a; box-shadow: 0 10px 30px rgba(0,0,0,0.05); }
+      article p { margin-bottom: 1.5rem; line-height: 1.8; color: #374151; }
     </style>
 </head>
 <body>
@@ -68,17 +37,24 @@
 
       function App() {
         const [currentPage, setCurrentPage] = useState('home');
+        const [selectedArticle, setSelectedArticle] = useState(null);
+
+        const navigateToArticle = (id) => {
+            setSelectedArticle(id);
+            setCurrentPage('article');
+            window.scrollTo(0, 0);
+        };
 
         const Navigation = () => (
           <nav className="fixed top-0 w-full z-50 minimal-nav">
             <div className="max-w-5xl mx-auto px-8 h-20 flex items-center justify-between">
-              <button onClick={() => setCurrentPage('home')} className="font-serif font-bold text-2xl tracking-tighter">K.</button>
+              <button onClick={() => {setCurrentPage('home'); setSelectedArticle(null);}} className="font-serif font-bold text-2xl tracking-tighter">K.</button>
               <div className="flex gap-8 text-xs font-medium uppercase tracking-[0.2em] text-muted">
-                {['Home', 'Blog', 'Portfolio', 'About'].map((item) => (
+                {['Home', 'Blog', 'Resources', 'About'].map((item) => (
                   <button 
                     key={item}
-                    onClick={() => setCurrentPage(item.toLowerCase())}
-                    className={`hover:text-ink transition-colors ${currentPage === item.toLowerCase() ? 'text-ink border-b border-ink font-bold' : ''}`}
+                    onClick={() => {setCurrentPage(item.toLowerCase()); setSelectedArticle(null);}}
+                    className={`hover:text-ink transition-colors ${currentPage === item.toLowerCase() || (item==='Blog' && currentPage==='article') ? 'text-ink border-b border-ink font-bold' : ''}`}
                   >
                     {item === 'About' ? 'About me' : item}
                   </button>
@@ -98,53 +74,84 @@
               </div>
             </div>
             <h1 className="font-serif text-5xl font-bold mb-6 tracking-tight">Design with Kirsten</h1>
-            <p className="text-muted text-sm tracking-[0.15em] uppercase mb-12">
-              UXUI Design <span className="mx-3 text-border">/</span> 
-              AI tips <span className="mx-3 text-border">/</span> 
-              Tech Lifestyle
-            </p>
+            <p className="text-muted text-sm tracking-[0.15em] uppercase mb-12">UXUI Design <span className="mx-3 text-border">/</span> AI tips <span className="mx-3 text-border">/</span> Tech Lifestyle</p>
             <div className="grid gap-6 sm:grid-cols-3 px-4">
-              <button onClick={() => setCurrentPage('blog')} className="minimal-card p-6 rounded-sm group">
+              <button onClick={() => setCurrentPage('blog')} className="minimal-card p-6 rounded-sm group text-center">
                 <div className="text-ink mb-2 font-serif italic text-lg opacity-40 group-hover:opacity-100 transition-opacity">01</div>
-                <div className="text-xs font-bold uppercase tracking-widest">View articles</div>
+                <div className="text-xs font-bold uppercase tracking-widest">Blog</div>
               </button>
               <a href="https://www.instagram.com/kirsten_uxui/" target="_blank" className="minimal-card p-6 rounded-sm text-center group">
                 <div className="text-ink mb-2 font-serif italic text-lg opacity-40 group-hover:opacity-100 transition-opacity">02</div>
-                <div className="text-xs font-bold uppercase tracking-widest">Case Study</div>
+                <div className="text-xs font-bold uppercase tracking-widest">Instagram</div>
               </a>
-              <button onClick={() => setCurrentPage('portfolio')} className="minimal-card p-6 rounded-sm group">
+              <button onClick={() => setCurrentPage('resources')} className="minimal-card p-6 rounded-sm group text-center">
                 <div className="text-ink mb-2 font-serif italic text-lg opacity-40 group-hover:opacity-100 transition-opacity">03</div>
-                <div className="text-xs font-bold uppercase tracking-widest">My Works</div>
+                <div className="text-xs font-bold uppercase tracking-widest">Resources</div>
               </button>
             </div>
           </div>
         );
 
-        const PortfolioPage = () => (
+        const BlogPage = () => (
+          <div className="relative z-10 w-full max-w-4xl mx-auto animate-fade-in px-6">
+            <header className="mb-16 border-l-4 border-ink pl-6">
+              <h2 className="font-serif text-4xl font-bold mb-3">Blog</h2>
+              <p className="text-muted text-sm leading-relaxed max-w-lg italic">Hello, I will share my UXUI design case study and learning journey of vibe coding here.</p>
+            </header>
+            <div className="grid gap-12">
+              {/* Article Card */}
+              <div 
+                onClick={() => navigateToArticle('vibe-coding')}
+                className="group cursor-pointer flex flex-col md:flex-row gap-8 items-center border-b border-border pb-12 hover:opacity-80 transition-opacity"
+              >
+                <div className="w-full md:w-72 h-48 bg-gray-100 border border-border flex items-center justify-center overflow-hidden">
+                    <span className="text-muted text-xs tracking-widest uppercase">Cover Photo Coming Soon</span>
+                </div>
+                <div className="flex-1">
+                  <h3 className="font-serif text-2xl font-bold mb-3 group-hover:text-muted transition-colors">My Journey of Vibe coding with Gemini</h3>
+                  <p className="text-muted text-sm leading-relaxed mb-4">這不僅僅是一個關於程式碼的故事，更是一場關於「直覺」與「對話」的實驗。在 2025 年，我們不再需要從零開始學習語法，而是學習如何與 AI 同步頻率...</p>
+                  <span className="text-xs font-bold uppercase tracking-widest border-b border-ink pb-1">Read More</span>
+                </div>
+              </div>
+            </div>
+          </div>
+        );
+
+        const ArticleContent = () => (
+          <div className="relative z-10 w-full max-w-2xl mx-auto animate-fade-in px-6 py-10">
+            <button onClick={() => setCurrentPage('blog')} className="text-muted text-xs font-bold uppercase tracking-widest mb-12 hover:text-ink">← Back to Blog</button>
+            <article>
+              <h1 className="font-serif text-4xl font-bold mb-8 leading-tight text-ink italic">My Journey of Vibe coding with Gemini</h1>
+              <div className="prose prose-sm font-light text-gray-700">
+                <p>作為一名 UXUI 設計師，我一直相信「設計」的本質是解決問題，而非僅僅是繪製精美的介面。然而，將設計轉化為真實網頁的過程，往往被繁瑣的技術細節所填滿。直到我遇見了 <strong>Vibe Coding</strong>。</p>
+                <p>這張網頁的誕生，沒有經歷傳統的開發流程。我沒有打開 VS Code，沒有安裝複雜的環境，也沒有查閱冗長的文檔。相反地，我坐在沙發上，透過 Google AI Studio (Gemini)，以一種近乎對話的方式，完成了這一切。</p>
+                <p><strong>什麼是 Vibe Coding？</strong> 對我而言，它是一種「意識流」開發。我不必精確地告訴 AI 每一行程式碼該怎麼寫，我只需傳達我想要的「感覺」——日式的極簡、呼吸般的留白、溫潤的和紙感背景。Gemini 就像一位極具默契的夥伴，迅速將我的審美意識轉化為 React 與 Tailwind CSS 結構。</p>
+                <p>在過程中，我們不斷地微調：從深色電競風轉向明亮的禪意風格，從複雜的 Portfolio 到精煉的 Resources 導向。每一次 Commit，都是審美與科技的完美對話。這場旅程讓我明白，未來的開發者，更多時候會像是一名「導演」或「策展人」，我們負責定義 Vibe，而 AI 負責執行細節。</p>
+                <p>歡迎來到我的數位花園，這裡是我與 AI 共同構築的、充滿 Vibe 的實驗場。</p>
+              </div>
+            </article>
+            <footer className="mt-20 pt-10 border-t border-border flex justify-between items-center">
+              <span className="text-[10px] text-muted uppercase tracking-widest">Written by Kirsten · 2025</span>
+              <button onClick={() => window.scrollTo({top: 0, behavior: 'smooth'})} className="text-[10px] font-bold uppercase tracking-widest">Back to top</button>
+            </footer>
+          </div>
+        );
+
+        const ResourcesPage = () => (
           <div className="relative z-10 w-full max-w-4xl mx-auto animate-fade-in px-6">
             <header className="text-left mb-16 border-l-4 border-ink pl-6">
-              <h2 className="font-serif text-4xl font-bold mb-2">Selected works</h2>
-              <p className="text-muted text-sm tracking-widest uppercase">UXUI design / Vibe coding</p>
+              <h2 className="font-serif text-4xl font-bold mb-2 tracking-tight">Resources</h2>
+              <p className="text-muted text-sm tracking-widest uppercase italic">Curated tools and assets for creators.</p>
             </header>
-            <div className="grid gap-12 md:grid-cols-2">
-              <div className="group cursor-pointer">
-                <div className="aspect-[4/3] bg-white border border-border overflow-hidden mb-6">
-                  <div className="w-full h-full flex items-center justify-center bg-[#f9f9f7] group-hover:scale-105 transition-transform duration-700 font-serif italic text-border">
-                    Current Site
-                  </div>
-                </div>
-                <h3 className="font-serif text-xl font-bold mb-1">Vibe Coding Project</h3>
-                <p className="text-muted text-xs uppercase tracking-widest">Portfolio System Design</p>
-              </div>
-              <a href="https://www.behance.net/gallery/152258595/UX-UI-project-News-Aggregator-App" target="_blank" className="group">
-                <div className="aspect-[4/3] bg-white border border-border overflow-hidden mb-6">
-                  <div className="w-full h-full flex items-center justify-center bg-[#f9f9f7] group-hover:scale-105 transition-transform duration-700">
-                    <span className="text-4xl">📰</span>
-                  </div>
-                </div>
-                <h3 className="font-serif text-xl font-bold mb-1 text-ink">News Aggregator App</h3>
-                <p className="text-muted text-xs uppercase tracking-widest">Mobile Experience Design</p>
-              </a>
+            <div className="grid gap-6 md:grid-cols-2">
+               <div className="minimal-card p-8 rounded-sm">
+                  <h3 className="font-serif text-xl font-bold mb-2">UXUI Design Kit</h3>
+                  <p className="text-muted text-xs tracking-widest mb-6">Coming Soon</p>
+               </div>
+               <div className="minimal-card p-8 rounded-sm">
+                  <h3 className="font-serif text-xl font-bold mb-2">AI Prompts Library</h3>
+                  <p className="text-muted text-xs tracking-widest mb-6">Coming Soon</p>
+               </div>
             </div>
           </div>
         );
@@ -156,10 +163,10 @@
               <div className="w-12 h-[1px] bg-ink mx-auto mt-4"></div>
             </header>
             <div className="space-y-8 text-ink leading-relaxed font-light">
-              <p>我是 Kirsten，一名專注於 UXUI 設計與 AI 工具應用的創作者。我相信好的設計應該像日式美學一樣，在簡潔中隱藏細節，在靜謐中傳達力量。</p>
+              <p>我是 Kirsten，一名專注於 UXUI 設計與 AI 工具應用的創作者。我相信好的設計應該像日式美學一樣，在簡潔中隱藏細節。</p>
               <div className="pt-8 border-t border-border">
                 <h4 className="text-xs font-bold uppercase tracking-widest mb-4">Focus Areas</h4>
-                <ul className="grid grid-cols-2 gap-4 text-sm text-muted">
+                <ul className="grid grid-cols-2 gap-4 text-sm text-muted italic">
                   <li>• User Experience Design</li>
                   <li>• AI Workflow Optimization</li>
                   <li>• Interface Aesthetics</li>
@@ -167,7 +174,6 @@
                 </ul>
               </div>
             </div>
-            <button onClick={() => setCurrentPage('home')} className="mt-16 text-xs font-bold uppercase tracking-[0.2em] border-b border-ink pb-1">Back to Home</button>
           </div>
         );
 
@@ -175,15 +181,11 @@
           <div className="min-h-screen flex flex-col items-center justify-center p-6 pt-32 pb-20">
             <Navigation />
             {currentPage === 'home' && <HomePage />}
-            {currentPage === 'portfolio' && <PortfolioPage />}
+            {currentPage === 'blog' && <BlogPage />}
+            {currentPage === 'resources' && <ResourcesPage />}
             {currentPage === 'about' && <AboutPage />}
-            {currentPage === 'blog' && (
-              <div className="z-10 text-center animate-fade-in">
-                <h2 className="font-serif text-3xl font-bold mb-6 italic">Blog</h2>
-                <p className="text-muted text-xs tracking-[0.2em] mb-12">準備中 / UNDER CONSTRUCTION</p>
-                <button onClick={() => setCurrentPage('home')} className="text-ink border-b border-ink pb-1 text-xs font-bold uppercase tracking-widest">Back</button>
-              </div>
-            )}
+            {currentPage === 'article' && <ArticleContent />}
+            
             <footer className="mt-32 text-center opacity-30">
                 <p className="text-[9px] tracking-[0.5em] uppercase font-medium">© 2025 Kirsten Yau / Tokyo Minimalist</p>
             </footer>
