--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <nav className="fixed top-0 w-full z-50 minimal-nav">
             <div className="max-w-5xl mx-auto px-4 sm:px-8 h-16 sm:h-20 flex items-center justify-between">
               <button onClick={() => {setCurrentPage('home'); setSelectedArticle(null);}} className="font-serif font-bold text-xl sm:text-2xl tracking-tighter">K.</button>
-              <div className="flex gap-4 sm:gap-8 text-[10px] sm:text-xs font-medium uppercase tracking-[0.1em] sm:tracking-[0.2em] text-muted overflow-x-auto no-scrollbar">
+              <div className="flex gap-5 sm:gap-8 text-[10px] sm:text-xs font-medium uppercase tracking-[0.15em] sm:tracking-[0.2em] text-muted overflow-x-auto no-scrollbar">
                 {['Home', 'Blog', 'Resources', 'About'].map((item) => (
                   <button 
                     key={item}
@@ -69,16 +69,21 @@
             </div>
             <h1 className="font-serif text-3xl sm:text-5xl font-bold mb-4 sm:mb-6 tracking-tight">Design with Kirsten</h1>
             <p className="text-muted text-[10px] sm:text-sm tracking-[0.1em] sm:tracking-[0.15em] uppercase mb-8 sm:mb-12">UXUI Design <span className="mx-2 text-border">/</span> AI tips <span className="mx-2 text-border">/</span> Tech Lifestyle</p>
-            <div className="grid gap-3 sm:gap-6 grid-cols-1 sm:grid-cols-3">
-              <button onClick={() => setCurrentPage('blog')} className="minimal-card py-4 sm:py-6 rounded-sm group">
-                <div className="text-xs font-bold uppercase tracking-widest text-ink">Blog</div>
+            
+            {/* 改為 2x2 Grid 佈局 */}
+            <div className="grid gap-3 grid-cols-2 max-w-sm mx-auto">
+              <button onClick={() => setCurrentPage('blog')} className="minimal-card py-4 sm:py-6 rounded-sm">
+                <div className="text-[10px] sm:text-xs font-bold uppercase tracking-widest text-ink">Blog</div>
               </button>
-              <a href="https://www.instagram.com/kirsten_uxui/" target="_blank" className="minimal-card py-4 sm:py-6 rounded-sm text-center">
-                <div className="text-xs font-bold uppercase tracking-widest text-ink">Instagram</div>
+              <button onClick={() => setCurrentPage('resources')} className="minimal-card py-4 sm:py-6 rounded-sm">
+                <div className="text-[10px] sm:text-xs font-bold uppercase tracking-widest text-ink">Resources</div>
+              </button>
+              <a href="https://www.instagram.com/kirsten_uxui/" target="_blank" className="minimal-card py-4 sm:py-6 rounded-sm">
+                <div className="text-[10px] sm:text-xs font-bold uppercase tracking-widest text-ink">Instagram</div>
               </a>
-              <button onClick={() => setCurrentPage('resources')} className="minimal-card py-4 sm:py-6 rounded-sm group">
-                <div className="text-xs font-bold uppercase tracking-widest text-ink">Resources</div>
-              </button>
+              <a href="https://www.threads.net/@kirsten_uxui" target="_blank" className="minimal-card py-4 sm:py-6 rounded-sm">
+                <div className="text-[10px] sm:text-xs font-bold uppercase tracking-widest text-ink">Threads</div>
+              </a>
             </div>
           </div>
         );
@@ -158,7 +163,7 @@
               <h2 className="font-serif text-3xl sm:text-4xl font-bold mb-2 italic">About me</h2>
               <div className="w-8 h-[1px] bg-ink mx-auto mt-4"></div>
             </header>
-            <div className="text-sm sm:text-base text-ink leading-relaxed font-light space-y-6">
+            <div className="text-sm sm:text-base text-ink leading-relaxed font-light space-y-6 text-center sm:text-left">
               <p>我是 Kirsten，一名專注於 UXUI 設計與 AI 工具應用的創作者。我相信好的設計應該像日式美學一樣，在簡潔中隱藏細節。</p>
               <div className="pt-8 border-t border-border">
                 <h4 className="text-[10px] font-bold uppercase tracking-widest mb-4">Focus Areas</h4>
